# V2EX_for_pypi

./: .gitignore  README.md  pyproject.toml
src/v2ex/: __init__.py  v2ex.py
tests/: main.py
